dia 3.2, adiciona paleta de cores e fonte

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Portfolio - Raphael Barzotto</title>
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
   </head>
 
   <body>
-    <a href="/assets/profile_picture.jpeg" target="_blank"><img src="/assets/profile_picture.jpeg" width="200" alt="foto de perfil de Raphael"></a>
-
+    <a id="profilePicture" href="/assets/profile_picture.jpeg" target="_blank"><img src="/assets/profile_picture.jpeg" alt="foto de perfil de Raphael" width="200px"></a>
     <h1>Raphael José Barzotto</h1>
+
     <br>
+    
     <h2>Descrição</h2>
     <p>Tenho <b>26 anos</b>, moro em <b>Curitiba/PR</b>, e sou formado engenheiro mecânico pela Universidade Tecnológica Federal do Paraná (UTFPR).<br>
-    Em 2021, decidi mudar completamente de área e me dedicar ao estuda da programação. Atualmente faço parte do time de estudantes da <a href="https://www.betrybe.com/" target="_blank">TRYBE</a></p>
+    Em 2021, decidi mudar completamente de área e me dedicar ao estudo da programação. Atualmente faço parte do time de estudantes da <a href="https://www.betrybe.com/" target="_blank">TRYBE</a></p>
 
  
   </body>
