dia 3.3, finaliza o portfolio

--- a/index.html
+++ b/index.html
@@ -7,15 +7,35 @@
   </head>
 
   <body>
-    <a id="profilePicture" href="/assets/profile_picture.jpeg" target="_blank"><img src="/assets/profile_picture.jpeg" alt="foto de perfil de Raphael" width="200px"></a>
-    <h1>Raphael José Barzotto</h1>
+    <header>
+      <h1>Portfólio - Web</h1>
+      <p>Este portfólio foi construído ao longo do bloco de introdução ao HTML e ao CSS do curso na Trybe</p>
+    </header>
 
-    <br>
+
+
+    <div class="foto">
+
+      <section id="nome-foto">
+        <h1 id="name">Raphael José Barzotto</h1>
+        <br>
+        <a href="/assets/profile_picture.jpeg" target="_blank"><img id="profilePicture" src="/assets/profile_picture.jpeg" alt="foto de perfil de Raphael"></a>
+      </section>
+    </div>
+
+    <div class="descricao"> 
+      <section id="secaodescricao">
+        <p id="descricaoescrita">Tenho <b>26 anos</b>, moro em <b>Curitiba/PR</b>, e sou formado engenheiro mecânico pela Universidade Tecnológica Federal do Paraná (UTFPR).<br>
+        Em 2021, decidi mudar completamente de área e me dedicar ao estudo da programação. Atualmente faço parte do time de estudantes da <a href="https://www.betrybe.com/" target="_blank">TRYBE</a></p>
+      </section>
+    </div>
     
-    <h2>Descrição</h2>
-    <p>Tenho <b>26 anos</b>, moro em <b>Curitiba/PR</b>, e sou formado engenheiro mecânico pela Universidade Tecnológica Federal do Paraná (UTFPR).<br>
-    Em 2021, decidi mudar completamente de área e me dedicar ao estudo da programação. Atualmente faço parte do time de estudantes da <a href="https://www.betrybe.com/" target="_blank">TRYBE</a></p>
-
+    <footer>
+      <div class="sociais">
+        <a href="https://github.com/raphabarzotto/" target="_blank"><img class="logos" id="logo-github" src="/assets/logo-github.png" alt="logo github"></a>
+        <a href="https://www.linkedin.com/in/raphabarzotto/" target="_blank"><img class="logos" id="logo-linkedin" src="/assets/logo-linkedin.png" alt="logo linkedin"></a>
+      </div>      
+    </footer>
  
   </body>
 </html>
