dia 3.3, corrige erros de portugues

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="descricao"> 
       <section id="secaodescricao">
-        <p id="descricaoescrita">Tenho <b>26 anos</b>, moro em <b>Curitiba/PR</b>, e sou formado engenheiro mecânico pela Universidade Tecnológica Federal do Paraná (UTFPR).<br>
+        <p id="descricaoescrita">Tenho <b>26 anos</b>, moro em <b>Curitiba/PR</b>, e sou um engenheiro mecânico formado pela Universidade Tecnológica Federal do Paraná (UTFPR).<br>
         Em 2021, decidi mudar completamente de área e me dedicar ao estudo da programação. Atualmente faço parte do time de estudantes da <a href="https://www.betrybe.com/" target="_blank">TRYBE</a></p>
       </section>
     </div>
